tests/mm0_mmu/fail/bad-sort4123.mm0
-- bad modifier order
free pure strict provable sort s4123;